Initial commit or updated files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <h2 class="question">Hey Rosh, do you like me?</h2>
+    <h2 class="question">Hey Rosh, do you like Us?</h2>
     <img class="gif" alt="gif" src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDlibndzdG03ZXJ6eTN0NGRjc3hnZzUwdG4wbjFxc2tkdXkycXkzYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Aa7LPlzUFSHyiKkmHg/giphy.gif" />
     <div class="btn-group">
       <button class="yes-btn">Yes</button>
